--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<app-nav-bar></app-nav-bar>
-<app-header></app-header>
-<app-about-me></app-about-me>
-<app-experience></app-experience>
-<app-education></app-education>
-<app-skills></app-skills>
-<app-project></app-project>
+<div class="main">
+  <app-nav-bar></app-nav-bar>
+  <app-header></app-header>
+  <app-about-me></app-about-me>
+  <app-experience></app-experience>
+  <app-education></app-education>
+  <app-skills></app-skills>
+  <app-project></app-project>
+</div>
