--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,8 @@
-<p>nav-bar works!</p>
+<div class="navbar">
+  <h2>Roberto Gabriel Hak</h2>
+  <div class="social">
+    <button class="github-b c"></button>
+    <button class="linkedin-b c"></button>
+    <button class="c" id="login">Login</button>
+  </div>
+</div>
