NavBar and Header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="main">
-  <app-nav-bar></app-nav-bar>
-  <app-header></app-header>
-  <app-about-me></app-about-me>
-  <app-experience></app-experience>
-  <app-education></app-education>
-  <app-skills></app-skills>
-  <app-project></app-project>
+  <app-nav-bar class="navbar"></app-nav-bar>
+  <app-header class="card" id="header"></app-header>
+  <app-about-me class="card"></app-about-me>
+  <app-experience class="card"></app-experience>
+  <app-education class="card"></app-education>
+  <app-skills class="card"></app-skills>
+  <app-project class="card"></app-project>
 </div>
