--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<div id="header">
+  <div class="cover">
+    <img id="cover-img">
+  </div>
+  <div class="info">
+    <img alt="" id="profile-img">
+    <button class="edit-b b"></button>
+    <h1>Roberto Gabriel Hak</h1>
+    <ul class="list-edit">
+      <button class="but-list"><li>Tengo interes en</li></button>
+      <button  class="but-list"><li>Añadir sección</li></button>
+      <button  class="but-list"><li>Más</li></button>
+    </ul>
+  </div>
+</div>
