--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,86 @@
+/*** Main *********************************************************************/
+
+body{
+  width: 98vw;
+  height: 100vh;
+  padding: 0%;
+  margin: 0%;
+  background-color: beige;
+  font-size: 20px;
+}
+
 .main{
-  margin: 0px;
-  padding: 0px;
+  max-width: 100vw;
+  /* display: block; */
+  display: flex;
+  flex-direction: column;
+}
+
+.card{
+  background-color: beige;
+  border: 1px solid black;
+  border-radius: 40px;
+  overflow: hidden;
+  margin-bottom: 20px;
+  padding: 10px;
+  margin: 10px;
+}
+/******************************************************************************/
+
+/*** General Styles ***********************************************************/
+
+.editable-card{
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.icon{
+  width: auto;
+  height: 100px;
+  margin: 0px 20px;
+}
+
+.info-card{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.grid-item-l{
+  justify-self: end;
+  align-self: center;
+}
+
+.b{
+  all: unset;
+  cursor: pointer;
+  background-size: cover; 
+  background-position: center;
+  width: 25px;
+  height: 25px;
+}
+
+.edit-b{
+  background-image: url('../assets/edit-text.png');
+}
+
+.delete-b{
+  background-image: url('../assets/delete.png');
+}
+
+.more-b{
+  background-image: url('../assets/plus.png');
+}
+
+.b:hover{
+  width: 30px;
+  height: 30px;
+}
+/******************************************************************************/
+.navbar{
+  position: sticky;
+}
+
+#header{
+  padding: 0;
 }
