--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,10 +1,6 @@
 
-
-/*** Header *******************************************************************/
-
 .navbar{
-  position: sticky;
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   background-color: rgb(56, 56, 56);
