All bases components created

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,1 +1,18 @@
-<p>project works!</p>
+<div class="editable-card grid-container" id="projects">
+  <div class="title grid-item">
+    <h2 class="subtitle">Projects</h2>
+  </div>
+  <div class="more grid-item grid-item-l">
+    <button class="more-b b"></button>
+  </div>
+  <div class="info-card grid-item"> 
+    <div>
+      <h3><a href="">Math APP</a></h3>
+      <p>App para que niñes aprendan matemática</p>
+    </div>
+  </div>
+  <div class="buttons grid-item grid-item-l">
+    <button class="edit-b b"></button>
+    <button class="delete-b b"></button>
+  </div>
+</div>
