--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,9 +21,8 @@ body{
   border: 1px solid black;
   border-radius: 40px;
   overflow: hidden;
-  margin-bottom: 20px;
   padding: 10px;
-  margin: 10px;
+  margin: 20px;
 }
 /******************************************************************************/
 
@@ -79,6 +78,9 @@ body{
 /******************************************************************************/
 .navbar{
   position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 100;
 }
 
 #header{
