--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="main">
-  <app-nav-bar class="navbar"></app-nav-bar>
-  <app-header class="card" id="header"></app-header>
-  <span class="card" *ngFor="let section of sectionsInfo">
-    <app-section [section]="section"></app-section>
-  </span>
-</div>
+
+<app-portfolio ></app-portfolio>
+<!-- <div>
+  <router-outlet></router-outlet>
+</div> -->
