--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="form" action="" (ngSubmit)="onSend($event)">
+<form [formGroup]="form" class="form" action="" (ngSubmit)="onSend()">
   <label class="label" for="">Email</label><input formControlName="email" class="input" type="email">
   <label class="label" for="">Password</label><input formControlName="password" class="input" type="password">
   <button type="submit" class="button">Login</button>
