--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-portfolio ></app-portfolio>
-<!-- <div>
+<!-- <app-portfolio ></app-portfolio> -->
+<div>
   <router-outlet></router-outlet>
-</div> -->
+</div>
